fixed a lot readability wise. App.js file looks right now! Promising recovery started

--- a/BrainFlix-Sprint-1/clark-hyde-brainflix/src/styles/App.scss
+++ b/BrainFlix-Sprint-1/clark-hyde-brainflix/src/styles/App.scss
@@ -1,5 +1,6 @@
 @use 'variables' as *;
 @use 'typography' as *;
+@use 'mixins' as *;
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -20,4 +21,10 @@ ul{
 a{
     text-decoration:none;
     color:white;
+}
+
+.mainbody{
+    @include desktop{
+        display:flex;
+    }
 }
